--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+
+    <script src="script.js"></script>
+    <style src="styles.css"></style>
+
+</head>
+
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<h1>Take this gangsters</h1>
+
+<div class="canvas"></div>
 
 </body>
 </html>
