--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 
-    <script src="script.js"></script>
-    <style src="styles.css"></style>
+    <link rel="stylesheet" href="styles.css">
 
 </head>
 
