--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 
     <link rel="stylesheet" href="styles.css">
 
+    <script>
+        let d = new Date();
+        alert("Today's date is " + d);
+    </script>
+
 </head>
 
 <body>
