--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <script>
-        let d = new Date();
-        alert("Today's date is " + d);
-    </script>
+    <script src="script.js"></script>
 
 </head>
 
