--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 
     <link rel="stylesheet" href="styles.css">
 
-    <script src="script.js"></script>
-
 </head>
 
 <body>
 
 <h1>Take this gangsters</h1>
 
-<div class="canvas"></div>
+<div id="canvas"></div>
+
+<script src="script.js"></script>
 
 </body>
 </html>
