--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 
 <body>
-
-<h1>Take this gangsters</h1>
+<main>
 
 <div id="canvas"></div>
 
 <script src="script.js"></script>
 
+</main>
 </body>
 </html>
