--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
 <body>
 <main>
 
-<div id="canvas"></div>
+    <div id="score-box">
+        <p id="score-1">Score: 0</p>
+        <p id="score-2">Score: 0</p>
+    </div>
 
-<script src="script.js"></script>
+    <div id="canvas">
+        <div id="paddle-1"></div>
+        <div id="ball"></div>
+        <div id="paddle-2"></div>
+    </div>
+
+    <script src="script.js"></script>
 
 </main>
 </body>
