--- a/index.html
+++ b/index.html
@@ -9,15 +9,21 @@
 <body>
 <main>
 
-    <div id="score-box">
-        <p id="score-1">Score: 0</p>
-        <p id="score-2">Score: 0</p>
+    <div>
+        <div id="score-box">
+            <p id="score-1">Score: 0</p>
+            <p id="score-2">Score: 0</p>
+        </div>
+
+        <div id="canvas">
+            <div id="paddle-1"></div>
+            <div id="ball"></div>
+            <div id="paddle-2"></div>
+        </div>
     </div>
 
-    <div id="canvas">
-        <div id="paddle-1"></div>
-        <div id="ball"></div>
-        <div id="paddle-2"></div>
+    <div id="footer">
+        <a href="https://github.com/ckuzmick/pong" >Source</a>
     </div>
 
     <script src="script.js"></script>
